Extract the cache in KisMyPaintOpSettings to properly handle size updates

Brush size cache was not properly reset on preset change. Now it is a
part of a cache structure, so it is quite hard to forget about that.

BUG:476141