libs/global/tests/KisValueCacheTest.h
@@ -1,0 +1,20 @@
+/*
+ *  SPDX-FileCopyrightText: 2023 Dmitry Kazakov <dimula73@gmail.com>
+ *
+ *  SPDX-License-Identifier: GPL-2.0-or-later
+ */
+
+#ifndef KISVALUECACHETEST_H
+#define KISVALUECACHETEST_H
+
+#include <QObject>
+
+class KisValueCacheTest : public QObject
+{
+    Q_OBJECT
+private Q_SLOTS:
+    void test();
+
+};
+
+#endif // KISVALUECACHETEST_H
